k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eyegic-backend-service
  labels:
    app: eyegic-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: eyegic-backend
