k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eyegic-opticals-service
  labels:
    app: eyegic-opticals
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: eyegic-opticals
